# jpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  test.june
cmake/: JuneTargets.cmake
cmake/modules/: JuneTargets.cmake
docs/: Memory.md
examples/: hello_raw.jasm  lib.june  mem_manage.june
include/: Common.hpp  JuneConfig.hpp  JuneConfig.hpp.in  Option.hpp  Result.hpp  SFINAE.hpp  _defines.h
include/VM/: Consts.hpp  Dylib.hpp  FailStack.hpp  Memory.hpp  OpCodes.hpp  SrcFile.hpp  Stack.hpp  State.hpp  VM.hpp  Vars.hpp
include/VM/Vars/: Any.hpp  Base.hpp  Bool.hpp  Float.hpp  Func.hpp  Int.hpp  Nil.hpp  Src.hpp  String.hpp  Vec.hpp
include/c/: Common.h  Dylib.h  Memory.h  OpCodes.h  SrcFile.h
lib/: CMakeLists.txt  main.cpp
lib/Common/: Args.cpp  CMakeLists.txt  Debug.cpp  Env.cpp  Err.cpp  FS.cpp  Fs.cpp  String.cpp
lib/Common/tests/: ErrTest.cpp  StringTest.cpp
lib/Core/: CmakeLists.txt  Core.cpp
lib/VM/: CMakeLists.txt  Consts.cpp  Dylib.cpp  Exec.cpp  FailStack.cpp  Frame.cpp  Memory.cpp  OpCodes.cpp  SrcFile.cpp  Stack.cpp  State.cpp  VarStack.cpp  Vars.cpp
lib/VM/OpCodes/: FromFile.cpp
lib/VM/Vars/: All.cpp  Any.cpp  Base.cpp  Bool.cpp  Float.cpp  Func.cpp  Int.cpp  Nil.cpp  Src.cpp  String.cpp  TypeId.cpp  Vec.cpp
lib/VM/bench/: Memory.cpp
utils/: format.py  header.py  tidy.py
utils/resources/: HEADER.txt
